--- a/public/resume.html
+++ b/public/resume.html
@@ -9,6 +9,10 @@
    </head>
    
    <body id="resume">
+      <header>
+         <h1>Aria R. Seiler</h1>
+      </header>
+      
       <nav>
          <ul>
             <li><a href="index.html">About</a></li>
